--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -519,11 +519,11 @@
                     "error": "An error occurred while importing the map"
                 },
                 "msgs": {
-                    "success": "Imported all maps successfully",
-                    "some-success": "Imported some maps successfully",
-                    "only-accept-zip": "Only zip files are supported",
-                    "not-found-zip": "Zip file does not exists",
-                    "invalid-zip": "Invalid zip file contents"
+                    "success": "Imported all maps successfully.",
+                    "some-success": "Imported some maps successfully.",
+                    "only-accept-zip": "Only zip files are supported.",
+                    "not-found-zip": "Zip file does not exists.",
+                    "invalid-zip": "Zip file does not contain any dat files."
                 }
             }
         },
