--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -522,8 +522,7 @@
                     "success": "Imported all maps successfully.",
                     "some-success": "Imported some maps successfully.",
                     "only-accept-zip": "Only zip files are supported.",
-                    "not-found-zip": "Zip file does not exists.",
-                    "invalid-zip": "Zip file does not contain any dat files."
+                    "invalid-zip": "Zip/s file do not contain any \"Info.dat\" file."
                 }
             }
         },
