--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -515,8 +515,7 @@
                     "success": "Se importaron todas las mapas con éxito.",
                     "some-success": "Se importaron algunos mapas con éxito.",
                     "only-accept-zip": "Solo se admiten archivos ZIP.",
-                    "not-found-zip": "El archivo ZIP no existe.",
-                    "invalid-zip": "El archivo ZIP no contiene archivos DAT."
+                    "invalid-zip": "El/Los archivo(s) Zip no contienen ningún archivo \"Info.dat\"."
                 }
             }
         },
