--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -515,8 +515,7 @@
                     "success": "Toutes les cartes ont été importées avec succès.",
                     "some-success": "Certaines cartes ont été importées avec succès.",
                     "only-accept-zip": "Seules les fichiers ZIP sont pris en charge.",
-                    "not-found-zip": "Le fichier ZIP n'existe pas.",
-                    "invalid-zip": "Le fichier ZIP ne contient aucun fichier DAT."
+                    "invalid-zip": "Le(s) fichier(s) Zip ne contient/contiennent aucun fichier \"Info.dat\"."
                 }
             }
         },
