--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -515,8 +515,7 @@
                     "success": "Все карты были успешно импортированы.",
                     "some-success": "Некоторые карты были успешно импортированы.",
                     "only-accept-zip": "Поддерживаются только ZIP-файлы.",
-                    "not-found-zip": "ZIP-файл не существует.",
-                    "invalid-zip": "ZIP-файл не содержит файлов DAT."
+                    "invalid-zip": "Файл(ы) ZIP не содержат файл(ы) \"Info.dat\"."
                 }
             }
         },
