--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -515,8 +515,7 @@
                     "success": "所有地图已成功导入。",
                     "some-success": "一些地图已成功导入。",
                     "only-accept-zip": "只支持 ZIP 文件。",
-                    "not-found-zip": "ZIP 文件不存在。",
-                    "invalid-zip": "ZIP 文件不包含任何 DAT 文件。"
+                    "invalid-zip": "ZIP 文件不包含任何 \"Info.dat\" 文件。"
                 }
             }
         },
