[ui] changed label to 'Download a version' in downloads page

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -150,7 +150,7 @@
             }
         },
         "available-versions": {
-            "title": "Wähle eine Version",
+            "title": "Eine Version herunterladen",
             "steam-release": "Versionsseite",
             "dropdown": {
                 "refresh": "Aktualisiere die Versionen",
