--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -150,7 +150,7 @@
             }
         },
         "available-versions": {
-            "title": "Select a version",
+            "title": "Download a version",
             "steam-release": "Release page",
             "dropdown": {
                 "refresh": "Refresh versions",
