--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -150,7 +150,7 @@
             }
         },
         "available-versions": {
-            "title": "バージョンを選択",
+            "title": "バージョンをダウンロード",
             "steam-release": "リリースページ",
             "dropdown": {
                 "refresh": "バージョンの更新",
