--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -150,7 +150,7 @@
             }
         },
         "available-versions": {
-            "title": "Choisis une version",
+            "title": "Télécharger une version",
             "steam-release": "Notes de version",
             "dropdown": {
                 "refresh": "Actualiser les versions",
