--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -45,7 +45,8 @@
                     "filters-btn": "Фильтр",
                     "dropdown": {
                         "export-maps": "Экспорт карт",
-                        "delete-maps": "Удалить карты"
+                        "delete-maps": "Удалить карты",
+                        "delete-duplicate-maps": "Удалить дубликаты"
                     }
                 },
                 "tabs": {
@@ -496,6 +497,14 @@
             "one-click-install": {
                 "success": "Карта установлена",
                 "error": "Ошибка установки карты"
+            },
+            "no-duplicates-maps": {
+                "title": "Нет дубликатов",
+                "msg": "Ни одна карта не была удалена"
+            },
+            "duplicates-maps-deleted": {
+                "title": "Дубликаты удалены",
+                "msg": "Дубликаты были удалены"
             }
         },
         "playlists": {
@@ -690,6 +699,11 @@
                     "title": "Общие карты будут скопированы в папку карт этой версии. Карты не будут потеряны, если это не выбрано."
                 },
                 "valid-btn": "Отвязать карты"
+            },
+            "delete-duplicate-maps": {
+                "title": "Удалить карту?",
+                "desc": "Только карта \"{map}\" является дубликатом. Вы уверены, что хотите ее удалить?",
+                "desc-plural": "Найдено {nb} дубликатов карт. Вы уверены, что хотите их удалить?"
             }
         },
         "download-maps": {
