--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -45,7 +45,8 @@
                     "filters-btn": "篩選",
                     "dropdown": {
                         "export-maps": "導出譜面",
-                        "delete-maps": "刪除譜面"
+                        "delete-maps": "刪除譜面",
+                        "delete-duplicate-maps": "刪除重複項"
                     }
                 },
                 "tabs": {
@@ -496,6 +497,14 @@
             "one-click-install": {
                 "success": "譜面安裝完成",
                 "error": "安裝譜面時發生錯誤"
+            },
+            "no-duplicates-maps": {
+                "title": "沒有重複",
+                "msg": "沒有刪除地圖"
+            },
+            "duplicates-maps-deleted": {
+                "title": "重複已刪除",
+                "msg": "重複已刪除"
             }
         },
         "playlists": {
@@ -690,6 +699,11 @@
                     "title": "保留譜面將會在取消關聯後把共享文件夾的所有譜面複製到當前版本。如果此項被禁用，譜面也不會遺失。"
                 },
                 "valid-btn": "取消關聯譜面"
+            },
+            "delete-duplicate-maps": {
+                "title": "刪除地圖",
+                "desc": "只有地圖「{map}」是重複的。你確定要刪除它嗎？",
+                "desc-plural": "發現了 {nb} 個重複的地圖。你確定要刪除它們嗎？"
             }
         },
         "download-maps": {
