--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -65,6 +65,10 @@
                         "empty-maps": {
                             "text": "マップがありません",
                             "button": "マップをダウンロードする"
+                        },
+                        "drop-zone": {
+                            "text": "マップをインポート",
+                            "subtext": "ZIPファイルをここにドロップしてマップをインポート"
                         }
                     }
                 }
