--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -65,6 +65,10 @@
                         "empty-maps": {
                             "text": "Нет карт",
                             "button": "Скачать карты"
+                        },
+                        "drop-zone": {
+                            "text": "Импортируйте свои карты",
+                            "subtext": "Перетащите сюда файлы ZIP, чтобы импортировать свои карты"
                         }
                     }
                 }
