--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -65,6 +65,10 @@
                         "empty-maps": {
                             "text": "无谱面",
                             "button": "下载谱面"
+                        },
+                        "drop-zone": {
+                            "text": "导入您的地图",
+                            "subtext": "将ZIP文件拖放到此处以导入您的地图"
                         }
                     }
                 }
