[feature-75] update translations + fix error notification translations

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -513,13 +513,13 @@
             "import-map": {
                 "titles": {
                     "success": "Kartenimport abgeschlossen",
-                    "error": "Beim Importieren der Karte ist ein Fehler aufgetreten"
+                    "error": "Beim Kartenimport ist ein Fehler aufgetreten"
                 },
                 "msgs": {
-                    "success": "Alle Karten wurden erfolgreich importiert.",
+                    "success": "Die Karten wurden erfolgreich importiert.",
                     "some-success": "Einige Karten wurden erfolgreich importiert.",
-                    "only-accept-zip": "Nur ZIP-Dateien werden unterstützt.",
-                    "invalid-zip": "Die Zip-Datei(en) enthält/en keine \"Info.dat\"-Datei."
+                    "only-accept-zip": "Nur Zip-Dateien werden unterstützt.",
+                    "invalid-zip": "Die Zip-Datei(en) enthalten keine Karten."
                 }
             }
         },
