--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -516,10 +516,10 @@
                     "error": "マップのインポート中にエラーが発生しました"
                 },
                 "msgs": {
-                    "success": "すべてのマップが正常にインポートされました。",
+                    "success": "マップが正常にインポートされました。",
                     "some-success": "一部のマップが正常にインポートされました。",
-                    "only-accept-zip": "ZIPファイルのみがサポートされています。",
-                    "invalid-zip": "ZIPファイルには「Info.dat」ファイルが含まれていません。"
+                    "only-accept-zip": "zipファイルのみがサポートされています。",
+                    "invalid-zip": "zipファイルにマップが含まれていません。"
                 }
             }
         },
