--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -512,14 +512,14 @@
             },
             "import-map": {
                 "titles": {
-                    "success": "Импорт карты завершен",
-                    "error": "Произошла ошибка при импорте карты"
+                    "success": "Импорт карт завершен",
+                    "error": "Произошла ошибка при импорте карт"
                 },
                 "msgs": {
-                    "success": "Все карты были успешно импортированы.",
-                    "some-success": "Некоторые карты были успешно импортированы.",
-                    "only-accept-zip": "Поддерживаются только ZIP-файлы.",
-                    "invalid-zip": "Файл(ы) ZIP не содержат файл(ы) \"Info.dat\"."
+                    "success": "Карты были успешно импортированы.",
+                    "some-success": "Некоторые карты успешно импортированы.",
+                    "only-accept-zip": "Поддерживаются только zip-файлы.",
+                    "invalid-zip": "В zip-файле(ах) нет карт."
                 }
             }
         },
