--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -512,14 +512,14 @@
             },
             "import-map": {
                 "titles": {
-                    "success": "Importación de mapa completa",
-                    "error": "Ocurrió un error al importar el mapa"
+                    "success": "Importación de mapas completada",
+                    "error": "Ocurrió un error durante la importación de mapas"
                 },
                 "msgs": {
-                    "success": "Se importaron todas las mapas con éxito.",
-                    "some-success": "Se importaron algunos mapas con éxito.",
-                    "only-accept-zip": "Solo se admiten archivos ZIP.",
-                    "invalid-zip": "El/Los archivo(s) Zip no contienen ningún archivo \"Info.dat\"."
+                    "success": "Los mapas se han importado con éxito.",
+                    "some-success": "Algunos mapas se han importado con éxito.",
+                    "only-accept-zip": "Solo se admiten archivos zip.",
+                    "invalid-zip": "El o los archivos zip no contienen mapas."
                 }
             }
         },
